<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/shaper_header_bg_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.wind.vpn.widget.TopBar
        android:id="@+id/top_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_header_bold"
        style="@style/TextNormalStyle.Bold.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/fillid_detail_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar_view" />

    <TextView
        android:id="@+id/tv_header_small"
        style="@style/TextSmallStyle.Gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="6dp"
        android:gravity="left"
        android:text="@string/fillid_detail_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header_bold" />

    <EditText
        android:id="@+id/et_fill_id_input"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:maxLength="32"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/tv_header_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:paddingLeft="14dp"
        android:inputType="number"
        android:gravity="center_vertical"
        android:hint="@string/hint_fill_id"
        android:background="@drawable/shaper_input_bg"
        style="@style/TextNormalStyle.Input"/>

    <com.wind.vpn.widget.CenterTextView
        android:id="@+id/btn_fill_id"
        style="@style/BlueBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/btn_fill_id"
        app:layout_constraintTop_toBottomOf="@id/et_fill_id_input" />

    <TextView
        android:id="@+id/tv_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_fill_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/btn_fill_id_summary"
        style="@style/TextLittleStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>
