<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F5F5F5">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_home_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.wind.vpn.widget.TopBar
        android:id="@+id/top_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_top"
        android:layout_width="274dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_group_people"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar_view" />

    <TextView
        android:id="@+id/tv_header_bold"
        style="@style/TextNormalStyle.Bold.Big"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/recommend_detail_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_top" />

    <TextView
        android:id="@+id/tv_header_small"
        style="@style/TextSmallStyle.Gray"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/recommend_detail_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header_bold" />

    <com.wind.vpn.widget.CenterTextView
        android:id="@+id/btn_renewal_drawer"
        style="@style/BlueBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/icon_link"
        android:drawablePadding="8dp"
        android:text="@string/share_link"
        app:layout_constraintTop_toBottomOf="@id/tv_header_small" />

    <com.wind.vpn.widget.CenterTextView
        android:id="@+id/btn_share_code"
        style="@style/BlueBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/icon_qrcode"
        android:drawablePadding="8dp"
        android:text="@string/share_qrcode"
        app:layout_constraintTop_toBottomOf="@id/btn_renewal_drawer" />

    <LinearLayout
        android:id="@+id/ll_bottom_info"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shaper_bg_white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_share_code">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_left_title"
                style="@style/TextSmallStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/reward_title_left" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_marginTop="7dp"
                android:layout_below="@id/tv_left_title">
                <TextView
                    android:id="@+id/tv_count_left"
                    style="@style/TextBigBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12" />
                <TextView
                    style="@style/TextSmallStyle.Blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/person" />
            </LinearLayout>
        </RelativeLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/icon_bottom_divider_line" />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_right_title"
                style="@style/TextSmallStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/reward_title_right" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:orientation="horizontal"
                android:layout_below="@id/tv_right_title">
                <TextView
                    android:id="@+id/tv_count_right"
                    style="@style/TextBigBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12" />
                <TextView
                    style="@style/TextSmallStyle.Blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/hours" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
