<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/shaper_header_bg_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.wind.vpn.widget.TopBar
        android:id="@+id/top_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_header_bold"
        style="@style/TextNormalStyle.Bold.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/act_title_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar_view" />

    <TextView
        android:id="@+id/tv_header_small"
        style="@style/TextSmallStyle.Gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="6dp"
        android:gravity="left"
        android:text="@string/register_detail_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header_bold" />

    <com.wind.vpn.widget.InputView
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header_small"/>
    <com.wind.vpn.widget.InputView
        android:id="@+id/input_pwd_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_username"/>
    <com.wind.vpn.widget.InputView
        android:id="@+id/input_pwd_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_pwd_1"/>

    <com.github.kr328.clash.design.view.CenterTextView
        android:id="@+id/btn_register"
        style="@style/BlueBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/btn_fill_id"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/input_pwd_2" />

    <TextView
        android:id="@+id/tv_change_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/change_to_register"
        style="@style/TextSmallStyle.Blue"/>

    <LinearLayout
        android:id="@+id/ll_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintRight_toRightOf="parent"
        >
        <CheckBox
            android:id="@+id/cb_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_agree_prefix"
            style="@style/TextLittleStyle.black"
            android:buttonTint="@null"
             />
        <TextView
            android:id="@+id/tv_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_agree_name"
            style="@style/TextLittleStyle.Blue"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginLeft="4dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
