<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F5F5F5">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_home_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.wind.vpn.widget.TopBar
        android:id="@+id/top_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_top"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:layout_marginTop="32dp"
        android:background="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar_view" />

    <TextView
        android:id="@+id/tv_header_bold"
        style="@style/TextNormalStyle.Bold.Big"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/safeloss_detail_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_top" />

    <TextView
        android:id="@+id/tv_header_small"
        style="@style/TextSmallStyle.Gray"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/safeloss_detail_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header_bold" />

    <com.github.kr328.clash.design.view.CenterTextView
        android:id="@+id/btn_try_luck"
        style="@style/BlueBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/icon_download"
        android:drawablePadding="8dp"
        android:text="@string/btn_save_now"
        app:layout_constraintTop_toBottomOf="@id/tv_header_small" />

    <TextView
        android:id="@+id/tv_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_try_luck"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/safe_loss_follow"
        style="@style/TextSmallStyle"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_follow"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="12dp">
        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/icon_follow_0"/>
        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/icon_follow_1"
            android:layout_marginLeft="6dp"/>
        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/icon_follow_2"
            android:layout_marginLeft="6dp"/>
        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/icon_follow_3"
            android:layout_marginLeft="6dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
