<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--头部菜单-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/drawer_header"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:background="@color/color_F5F5F5"
        app:layout_constraintTop_toTopOf="parent">
        <!--头像-->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_avatar"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="32dp"
            app:shapeAppearanceOverlay="@style/circleImageStyle" />
        <!--名称-->
        <TextView
            android:id="@+id/tv_name"
            style="@style/TextTitleStyle.UserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="10dp"
            android:ellipsize="end"
            android:text="Log in/Register >"
            app:layout_constraintLeft_toRightOf="@id/iv_avatar"
            app:layout_constraintTop_toTopOf="@id/iv_avatar"
            app:layout_constraintRight_toRightOf="parent"/>
        <!--标签-->
        <TextView
            android:id="@+id/tv_id"
            style="@style/TextSmallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:text="12345"
            app:layout_constraintLeft_toLeftOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />
        <TextView
            android:id="@+id/tv_copy"
            style="@style/TextSmallStyle.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="8dp"
            android:text="@string/copy"
            app:layout_constraintLeft_toRightOf="@id/tv_id"
            app:layout_constraintTop_toTopOf="@id/tv_id" />
        <TextView
            android:id="@+id/tv_expire"
            style="@style/TextLittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Expire date：2024-02-12 20:38:31"
            app:layout_constraintLeft_toLeftOf="@id/tv_name"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--列表菜单-->
    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/drawer_header"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/tv_recommend"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/friends_recommend"
        style="@style/BlueBtnStyle.Light"
        android:layout_marginBottom="44dp"/>
    <TextView
        android:id="@+id/tv_renewal_drawer"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintBottom_toTopOf="@id/tv_recommend"
        android:text="@string/renew_membership"
        style="@style/BlueBtnStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="44dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>